--- a/src/TgBotFramework.csproj
+++ b/src/TgBotFramework.csproj
@@ -5,15 +5,15 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <AssemblyVersion>0.1</AssemblyVersion>
         <FileVersion>0.1</FileVersion>
-        <PackageVersion>0.3.1</PackageVersion>
+        <PackageVersion>0.4</PackageVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <Copyright>(с) Fedorus</Copyright>
-        <RepositoryUrl>https://github.com/Fedorus/TgBotFramework</RepositoryUrl>
+        <Copyright>(с) TgBotFramework</Copyright>
+        <RepositoryUrl>https://github.com/TgBotFramework/TgBotFramework</RepositoryUrl>
         <Title>TgBotFramework</Title>
         <Authors />
         <Description>framework for Telegram.Bot wrapper</Description>
-        <PackageProjectUrl>https://github.com/Fedorus/TgBotFramework</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/Fedorus/TgBotFramework</PackageLicenseUrl>
+        <PackageProjectUrl>https://github.com/TgBotFramework/TgBotFramework</PackageProjectUrl>
+        <PackageLicenseUrl>https://github.com/TgBotFramework/TgBotFramework/blob/master/LICENSE</PackageLicenseUrl>
         <PackageTags>Telegram Bot Framework</PackageTags>
     </PropertyGroup>
 
