--- a/tests/TgBotFramework.Tests/TgBotFramework.Tests.csproj
+++ b/tests/TgBotFramework.Tests/TgBotFramework.Tests.csproj
@@ -1,9 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
 
         <IsPackable>false</IsPackable>
+
+        <LangVersion>default</LangVersion>
+
+        <Nullable>disable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
