--- a/src/TgBotFramework.csproj
+++ b/src/TgBotFramework.csproj
@@ -1,11 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <AssemblyVersion>0.1</AssemblyVersion>
         <FileVersion>0.1</FileVersion>
-        <PackageVersion>0.5.3</PackageVersion>
+        <PackageVersion>0.5.4</PackageVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Copyright>(с) TgBotFramework</Copyright>
         <RepositoryUrl>https://github.com/TgBotFramework/TgBotFramework</RepositoryUrl>
@@ -16,6 +15,7 @@
         <PackageLicenseUrl>https://github.com/TgBotFramework/TgBotFramework/blob/master/LICENSE</PackageLicenseUrl>
         <PackageTags>Telegram Bot Framework</PackageTags>
         <LangVersion>default</LangVersion>
+        <TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
     </PropertyGroup>
 
     <ItemGroup>
@@ -24,6 +24,9 @@
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+      <PackageReference Include="System.Threading.Channels" Version="6.0.0" />
+      <PackageReference Include="System.Threading.Tasks" Version="4.3.0" />
+      <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
       <PackageReference Include="Telegram.Bot" Version="18.0.0" />
     </ItemGroup>
 
